k8s/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: annotation-system
  labels:
    name: annotation-system
